--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@prisma/client": "^6.19.2",
     "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.17.0",
     "prisma": "^6.19.2",
     "sequelize": "^6.37.7"
